--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,10 @@ opt-einsum==3.2.1
 protobuf==3.12.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
+scipy==1.4.1
 six==1.15.0
-tensorboard==1.15.0
-tensorflow==1.15.0
+tensorboard==1.12.2
+tensorflow==1.12.0
 tensorflow-estimator==1.15.1
 termcolor==1.1.0
 Werkzeug==1.0.1
